# mini_settings

./: LICENSE  README.md  meson.build  meson_options.txt  mini_settings_ascii.h  mini_settings_get.c  mini_settings_get.h  mini_settings_get_main.c  mini_settings_read_file.c  mini_settings_read_file.h  mini_settings_set.c  mini_settings_set.h  mini_settings_set_main.c  mini_settings_stringbuf.c  mini_settings_stringbuf.h
test/: mini-settings-test.sh  test.conf
