project('mini-settings-scripts', 'c')
executable('mini-settings-get', ['mini_settings_get_main.c', 'mini_settings_get.c', 'mini_settings_read_file.c'], install: true)
executable('mini-settings-set', ['mini_settings_set_main.c', 'mini_settings_set.c', 'mini_settings_read_file.c', 'mini_settings_stringbuf.c'], install: true)
